src/objects/College__c.object
<CustomObject>
    <fields>
        <fullName>College_Name__c</fullName>
        <label>College Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teacher_Name__c</fullName>
        <label>Teacher Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abhay Purohit</fullName>
                </value>
                <value>
                    <fullName>Abhishek Sharma</fullName>
                </value>
                <value>
                    <fullName>Akash Singh</fullName>
                </value>
                <value>
                    <fullName>Dheeraj Mishra</fullName>
                </value>
                <value>
                    <fullName>Digvijay Singh</fullName>
                </value>
                <value>
                    <fullName>Ronik Sharma</fullName>
                </value>
                <value>
                    <fullName>Vijay Sharma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>College</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colleges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>